Fix report case sensitive naming